--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,10 +1,11 @@
+
 .masthead {
   position: relative;
   width: 100%;
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  padding-bottom: 50px;
+  padding-bottom: 3rem;
   background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/back.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -21,7 +22,7 @@
   }
   h2 {
     max-width: 20rem;
-    font-size: 1rem;
+    font-size: 2rem;
   }
   @media(min-width: 768px) {
     h1 {
@@ -38,7 +39,7 @@
     }
     h2 {
       max-width: 30rem;
-      font-size: 1.25rem;
+      font-size: 3.25rem;
     }
   }
 }
