--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,7 @@
 @import 'reception.scss';
 @import 'signup.scss';
 @import 'contact.scss';
+@import 'countdown.scss';
 
 body {
   font-family: 'Nunito';
