--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,9 +5,10 @@
 @import 'buttons.scss';
 @import 'ceremony.scss';
 @import 'reception.scss';
-@import 'signup.scss';
+@import 'rsvp.scss';
 @import 'contact.scss';
 @import 'countdown.scss';
+@import 'gallery.scss';
 
 body {
   font-family: 'Nunito';
