--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
  */
 
 #mainNav {
-  min-height: 56px;
+  min-height: 36px;
   background-color: #fff;
 }
 
@@ -23,7 +23,7 @@
 #mainNav .navbar-brand {
   color: #161616;
   font-weight: 700;
-  padding: .9rem 0;
+  padding: .1rem 0;
 }
 
 #mainNav .navbar-nav .nav-item {
@@ -93,8 +93,8 @@
   width: 100%;
   height: auto;
   min-height: 35rem;
-  padding: 15rem 0;
-  padding-bottom: 3rem;
+  padding: 20rem 0;
+  padding-bottom: 0.5rem;
   background: linear-gradient(to bottom, rgba(238, 72, 218, 0.119608) 0%, rgba(22, 22, 22, 0.1) 75%, #161616 100%), url("../img/back.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -102,7 +102,7 @@
   background-size: cover;
 }
 
-.masthead h1 {
+.masthead .title-text {
   font-family: 'Varela Round';
   font-size: 2.5rem;
   line-height: 2.5rem;
@@ -118,7 +118,10 @@
 }
 
 @media (min-width: 768px) {
-  .masthead h1 {
+  .masthead {
+    padding-bottom: 3rem;
+  }
+  .masthead .title-text {
     font-size: 4rem;
     line-height: 4rem;
   }
@@ -128,7 +131,7 @@
   .masthead {
     height: 100vh;
   }
-  .masthead h1 {
+  .masthead .title-text {
     font-size: 6.5rem;
     line-height: 6.5rem;
     letter-spacing: 0.8rem;
@@ -172,12 +175,53 @@
   background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
 }
 
+.ceremony-section .container {
+  max-width: 1260px;
+}
+
 .ceremony-section p {
   margin-bottom: 5rem;
 }
 
+.ceremony-section .church-img {
+  background: linear-gradient(to bottom, rgba(238, 72, 218, 0.119608) 0%, rgba(22, 22, 22, 0.1) 75%, #161616 100%), url("../img/church.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
+  min-height: 22rem;
+}
+
+.ceremony-section .map-container {
+  min-height: 22rem;
+}
+
+.ceremony-section .church-container,
+.ceremony-section .map-container {
+  margin-bottom: 5rem;
+}
+
+@media (max-width: 1024px) {
+  .ceremony-section {
+    padding-top: 1.5rem;
+  }
+  .ceremony-section .map-container,
+  .ceremony-section .church-img {
+    min-height: 18rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .ceremony-section {
+    padding-top: 1rem;
+  }
+  .ceremony-section .map-container,
+  .ceremony-section .church-img {
+    min-height: 13rem;
+  }
+}
+
 .reception-section {
-  padding: 10rem 0;
+  padding: 3rem 0;
 }
 
 .reception-section .featured-text {
@@ -207,16 +251,16 @@
   }
 }
 
-.signup-section {
+.rsvp-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/night.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
 }
 
-.signup-section .form-inline input {
+.rsvp-section .form-inline input {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
   height: auto;
@@ -286,31 +330,11 @@
   src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.ttf");
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ L-Text >= 26 ]*/
-.l1-txt1 {
-  font-family: Lato-Hairline;
-  font-size: 72px;
-  line-height: 1.1;
-  color: #fff;
-  text-transform: uppercase;
-}
-
 .l1-txt2 {
   font-family: PlayfairDisplay-Italic;
   font-size: 90px;
   line-height: 1;
   color: #fff;
-  text-transform: uppercase;
-}
-
-/*//////////////////////////////////////////////////////////////////
-[ M-Text 16 - 25 ]*/
-.m1-txt1 {
-  font-family: Lato-Regular;
-  font-size: 18px;
-  color: #555;
-  line-height: 1.2;
   text-transform: uppercase;
 }
 
@@ -333,8 +357,45 @@
   margin-bottom: 30px;
 }
 
+@media (max-width: 992px) {
+  .l1-txt2 {
+    font-size: 50px;
+  }
+  .m1-txt2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .l1-txt2 {
+    font-size: 38px;
+  }
+  .m1-txt2 {
+    font-size: 18px;
+  }
+  .p-b-37 {
+    padding-bottom: 17px;
+  }
+  .p-r-20 {
+    padding-right: 20px;
+  }
+  .m-b-30 {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 468px) {
+  .l1-txt2 {
+    font-size: 32px;
+  }
+  .m1-txt2 {
+    font-size: 14px;
+  }
+}
+
 .flex-w,
 .flex-c,
+.flex-col-c,
 .dis-flex {
   display: flex;
 }
@@ -353,6 +414,33 @@
   -moz-flex-direction: column;
   -o-flex-direction: column;
   flex-direction: column;
+}
+
+.btn {
+  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+  padding: 1.25rem 2rem;
+  font-family: 'Varela Round';
+  font-size: 80%;
+  text-transform: uppercase;
+  letter-spacing: .15rem;
+  border: 0;
+}
+
+.btn-primary {
+  background-color: #64a19d;
+}
+
+.btn-primary:hover {
+  background-color: #4f837f;
+}
+
+.btn-primary:focus {
+  background-color: #4f837f;
+  color: white;
+}
+
+.btn-primary:active {
+  background-color: #467370 !important;
 }
 
 body {
