--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@
 
 .ceremony-section {
   padding-top: 4rem;
-  padding-bottom: 5rem;
+  padding-bottom: 4rem;
   background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
 }
 
@@ -203,6 +203,7 @@
 @media (max-width: 1024px) {
   .ceremony-section {
     padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
   .ceremony-section .map-container,
   .ceremony-section .church-img {
@@ -213,6 +214,7 @@
 @media (max-width: 768px) {
   .ceremony-section {
     padding-top: 1rem;
+    padding-bottom: 1.5rem;
   }
   .ceremony-section .map-container,
   .ceremony-section .church-img {
@@ -416,31 +418,156 @@
   flex-direction: column;
 }
 
-.btn {
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  padding: 1.25rem 2rem;
-  font-family: 'Varela Round';
-  font-size: 80%;
-  text-transform: uppercase;
-  letter-spacing: .15rem;
-  border: 0;
+.gallery-section {
+  /*jssor slider loading skin spin css*/
+  /*jssor slider arrow skin 106 css*/
+  /*jssor slider thumbnail skin 101 css*/
 }
 
-.btn-primary {
-  background-color: #64a19d;
+.gallery-section .gallery-container {
+  margin-bottom: 3rem;
 }
 
-.btn-primary:hover {
-  background-color: #4f837f;
+.gallery-section .jssorl-009-spin img {
+  -webkit-animation-name: jssorl-009-spin;
+  animation-name: jssorl-009-spin;
+  -webkit-animation-duration: 1.6s;
+  animation-duration: 1.6s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
-.btn-primary:focus {
-  background-color: #4f837f;
-  color: white;
+@-webkit-keyframes jssorl-009-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.btn-primary:active {
-  background-color: #467370 !important;
+@keyframes jssorl-009-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.gallery-section .jssora106 {
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+
+.gallery-section .jssora106 .c {
+  fill: #fff;
+  opacity: .3;
+}
+
+.gallery-section .jssora106 .a {
+  fill: none;
+  stroke: #000;
+  stroke-width: 350;
+  stroke-miterlimit: 10;
+}
+
+.gallery-section .jssora106:hover .c {
+  opacity: .5;
+}
+
+.gallery-section .jssora106:hover .a {
+  opacity: .8;
+}
+
+.gallery-section .jssora106.jssora106dn .c {
+  opacity: .2;
+}
+
+.gallery-section .jssora106.jssora106dn .a {
+  opacity: 1;
+}
+
+.gallery-section .jssora106.jssora106ds {
+  opacity: .3;
+  pointer-events: none;
+}
+
+.gallery-section .jssort101 .p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  background: #000;
+}
+
+.gallery-section .jssort101 .p .cv {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #000;
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+.gallery-section .jssort101 .a {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 400;
+  stroke-miterlimit: 10;
+  visibility: hidden;
+}
+
+.gallery-section .jssort101 .p:hover .cv, .gallery-section .jssort101 .p.pdn .cv {
+  border: none;
+  border-color: transparent;
+}
+
+.gallery-section .jssort101 .p:hover {
+  padding: 2px;
+}
+
+.gallery-section .jssort101 .p:hover .cv {
+  background-color: black;
+  opacity: .35;
+}
+
+.gallery-section .jssort101 .p:hover.pdn {
+  padding: 0;
+}
+
+.gallery-section .jssort101 .p:hover.pdn .cv {
+  border: 2px solid #fff;
+  background: none;
+  opacity: .35;
+}
+
+.gallery-section .jssort101 .pav .cv {
+  border-color: #fff;
+  opacity: .35;
+}
+
+.gallery-section .jssort101 .pav .a, .gallery-section .jssort101 .p:hover .a {
+  visibility: visible;
+}
+
+.gallery-section .jssort101 .t {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  opacity: .6;
+}
+
+.gallery-section .jssort101 .pav .t, .gallery-section .jssort101 .p:hover .t {
+  opacity: 1;
 }
 
 body {
