--- a/scss/_rsvp.scss
+++ b/scss/_rsvp.scss
@@ -1,5 +1,5 @@
 .rsvp-section {
-  padding: 10rem 0;
+  padding: 5rem 0;
   background: linear-gradient(to bottom, #{fade-out($black, .9)} 0%,#{fade-out($black, .5)} 75%,$black 100%), url('../img/night.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -17,4 +17,12 @@
       border: 0;
     }
   }
+  @media(max-width: 1024px) {
+    padding-top: 2rem; 
+ }
+
+ @media(max-width: 768px) { 
+  padding-top: 1rem; 
+  }
 }
+
