install button and 2 gallerys

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,4 +1,8 @@
 #mainNav {
+
+  .btn-info {
+    padding:.375rem .75rem;
+  }
   min-height: 36px;
   background-color: $white;
   .navbar-toggler {
