--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,7 +9,7 @@
 @import 'contact.scss';
 @import 'countdown.scss';
 @import 'gallery.scss';
-
+@import 'polaroides.scss';
 body {
   font-family: 'Nunito';
   letter-spacing: 0.0625em;
