--- a/scss/_rsvp.scss
+++ b/scss/_rsvp.scss
@@ -1,10 +1,13 @@
 .rsvp-section {
-  padding: 5rem 0;
   background: linear-gradient(to bottom, #{fade-out($black, .9)} 0%,#{fade-out($black, .5)} 75%,$black 100%), url('../img/night.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  
+  .container {
+    padding: 5rem 0;
+  }
   .form-inline {
     input {
       box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0,0,0,.1) !important;
@@ -24,5 +27,65 @@
  @media(max-width: 768px) { 
   padding-top: 1rem; 
   }
+
+  /* Overlay */
+  .rsvp-overlay {
+    position: relative
+  }
+  
+  .rsvp-overlay::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(231, 9, 21, 0.7);
+    left: 0;
+    z-index: 100;
+    -webkit-transition: opacity 0.3s, visibility 0s 0.3s;
+    transition: opacity 0.3s, visibility 0s 0.3s;
+  }
+  
+  .rsvp-overlay::before {
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+  }
+  
+  
+   .rsvp-overlay::after {
+    content: 'Yor RSVP has been sent';
+    font-weight: 400;
+    position: absolute;
+    border: 3px solid #fff;
+    text-align: center;
+    white-space: nowrap;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    padding: 10px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    z-index: 101;
+  }
+  
+  .rsvp-overlay::before,
+  .rsvp-overlay::after {
+    // opacity: 0;
+    // visibility: hidden;
+    opacity: 1;
+    visibility: visible;
+  
+  }
+  
+  .rsvp-overlay::before,
+  .rsvp-overlay:hover::after,
+  .touch .rsvp-overlay::after  {
+    opacity: 1;
+    visibility: visible;
+  }
+
 }
+
 
