--- a/scss/_rsvp.scss
+++ b/scss/_rsvp.scss
@@ -52,7 +52,7 @@
   
   
    .rsvp-overlay::after {
-    content: 'Yor RSVP has been sent';
+    content: 'Your RSVP has been sent';
     font-weight: 400;
     position: absolute;
     border: 3px solid #fff;
