--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,7 @@
 }
 
 .rsvp-section .rsvp-overlay::after {
-  content: 'Yor RSVP has been sent';
+  content: 'Your RSVP has been sent';
   font-weight: 400;
   position: absolute;
   border: 3px solid #fff;
@@ -663,6 +663,26 @@
   padding-top: 4rem;
 }
 
+.polaroid-gallery #leftNav,
+.polaroid-gallery #rightNav {
+  font-size: 2rem;
+  color: #2f2e2ef2;
+  cursor: pointer;
+  background: rgba(57, 52, 52, 0.25);
+  border-radius: 100%;
+  padding: .8rem;
+}
+
+.polaroid-gallery #leftNav {
+  float: left;
+  margin-left: 5%;
+}
+
+.polaroid-gallery #rightNav {
+  float: right;
+  margin-right: 5%;
+}
+
 .polaroid-gallery .camera-img {
   background: url("/img/camera.png");
   width: 10rem;
@@ -686,6 +706,7 @@
 }
 
 .wood-container {
+  position: relative;
   background: url(/img/wood-background.jpg);
 }
 
@@ -772,7 +793,7 @@
 .photostack nav {
   position: absolute;
   width: 100%;
-  bottom: 30px;
+  bottom: 50%;
   z-index: 90;
   text-align: center;
   left: 0;
