--- a/css/styles.css
+++ b/css/styles.css
@@ -663,6 +663,24 @@
   padding-top: 4rem;
 }
 
+.polaroid-gallery .photostack-current {
+  cursor: pointer;
+}
+
+.polaroid-gallery .leftNavDiv {
+  left: 5%;
+  width: auto;
+  position: absolute;
+  top: 40%;
+}
+
+.polaroid-gallery .rightNavDiv {
+  right: 5%;
+  position: absolute;
+  top: 40%;
+  width: auto;
+}
+
 .polaroid-gallery #leftNav,
 .polaroid-gallery #rightNav {
   font-size: 2rem;
@@ -702,6 +720,16 @@
   }
   .polaroid-gallery .polaroid-title-container {
     padding-top: 1.5rem;
+  }
+}
+
+@media (max-width: 4150px) {
+  .polaroid-gallery .camera-img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .polaroid-gallery .polaroid-title-container {
+    padding-top: 0rem;
   }
 }
 
@@ -938,11 +966,6 @@ figure.photostack-current::after {
   perspective: 1800px;
 }
 
-.photostack-perspective > div,
-.photostack-perspective figure {
-  transform-style: preserve-3d;
-}
-
 .photostack-perspective figure,
 .photostack-perspective figure div {
   -webkit-backface-visibility: hidden;
@@ -951,6 +974,8 @@ figure.photostack-current::after {
 
 .photostack-perspective figure.photostack-flip {
   transform-origin: 0% 50%;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
 }
 
 .csstransformspreserve3d figure.photostack-flip .photostack-back {
