--- a/scss/_polaroides.scss
+++ b/scss/_polaroides.scss
@@ -6,6 +6,25 @@
       padding-top: 4rem;
     }
 
+    .photostack-current  {
+      cursor: pointer;
+    }
+
+    .leftNavDiv{
+      left: 5%;
+      width: auto;
+      position: absolute;
+      top: 40%;
+    }
+
+    .rightNavDiv{
+      right: 5%;
+      position: absolute;
+      top: 40%;
+      width: auto;
+    }
+
+
     #leftNav,
     #rightNav {
       font-size: 2rem;
@@ -45,6 +64,18 @@
         padding-top: 1.5rem;
       }
       
+    }  
+
+    @media(max-width: 4150px) {
+
+      .camera-img {
+        width:  3rem;
+        height: 3rem;
+        } 
+        
+      .polaroid-title-container {
+        padding-top: 0rem;
+      }
     }  
   
    }
@@ -299,11 +330,11 @@
       perspective: 1800px;
     }
     
-    .photostack-perspective > div,
-    .photostack-perspective figure {
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-    }
+    // .photostack-perspective > div,
+    // .photostack-perspective figure {
+    //   // -webkit-transform-style: preserve-3d;
+    //   // transform-style: preserve-3d;
+    // }
     
     .photostack-perspective figure,
     .photostack-perspective figure div {
@@ -314,6 +345,8 @@
     .photostack-perspective figure.photostack-flip {
       -webkit-transform-origin: 0% 50%;
       transform-origin: 0% 50%;
+      transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
     }
     
     .csstransformspreserve3d figure.photostack-flip .photostack-back {
