--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@
   min-height: 35rem;
   padding: 20rem 0;
   padding-bottom: 0.5rem;
-  background: linear-gradient(to bottom, rgba(238, 72, 218, 0.119608) 0%, rgba(22, 22, 22, 0.1) 75%, #161616 100%), url("../img/back.png");
+  background: linear-gradient(to bottom, rgba(238, 72, 218, 0.119608) 0%, rgba(22, 22, 22, 0.1) 75%, #161616 100%), url("../img/background-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -147,6 +147,12 @@
 
 @media (min-width: 992px) {
   .masthead {
+    background: linear-gradient(to bottom, rgba(238, 72, 218, 0.119608) 0%, rgba(22, 22, 22, 0.1) 75%, #161616 100%), url("../img/back.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: auto;
     height: 100vh;
   }
   .masthead .title-text {
