--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,4 +1,3 @@
-
 .masthead {
   position: relative;
   width: 100%;
@@ -6,7 +5,7 @@
   min-height: 35rem;
   padding: 20rem 0;
   padding-bottom: 0.5rem;
-  background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/back.png');
+  background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/background-mobile.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -24,6 +23,7 @@
     max-width: 20rem;
     font-size: 2rem;
   }
+  
   @media(min-width: 768px) {
     padding-bottom: 3rem;
     .title-text {
@@ -32,6 +32,13 @@
     }
   }
   @media(min-width: 992px) {
+    background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/back.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: auto;
+
     height: 100vh;
     .title-text {
       font-size: 6.5rem;
