--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,8 +8,8 @@
 @import 'rsvp.scss';
 @import 'contact.scss';
 @import 'countdown.scss';
-@import 'gallery.scss';
 @import 'polaroides.scss';
+@import 'accomodation.scss';
 body {
   font-family: 'Nunito';
   letter-spacing: 0.0625em;
