--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -23,7 +23,39 @@
     max-width: 20rem;
     font-size: 2rem;
   }
+  .mast-button {
+    font-size: 60%;
+    padding: .5rem 1rem;
+  }
   
+  @media(min-width: 400px) {
+    background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/background-tablet.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: auto;
+
+    .mast-button {
+      font-size: 70%;
+      padding: .85rem 1.5rem;
+    }
+  }
+
+  @media(min-width: 568px) {
+    background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/background-tablet.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: auto;
+
+    .mast-button {
+      font-size: 80%;
+      padding: 1.5rem 2rem;
+    }
+  }
+
   @media(min-width: 768px) {
     padding-bottom: 3rem;
     .title-text {
@@ -31,6 +63,7 @@
       line-height: 4rem;
     }
   }
+
   @media(min-width: 992px) {
     background: linear-gradient(to bottom, #{fade-out(#ee48da38, .1)} 0%,#{fade-out($black, .9)} 75%,#161616 100%), url('../img/back.png');
     background-position: center;
