--- a/scss/_accomodation.scss
+++ b/scss/_accomodation.scss
@@ -2,4 +2,20 @@
   .accomodation-icon {
     font-size: 180%;
   }
+
+  .accom-body-text {
+    margin-left: 2rem;
+    color: black;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  .accom-header-text {
+    color: darkblue;
+    font-weight: 600;
+  }
+  .accom-ol {
+    color: darkblue;
+    font-weight: 600;
+    font-size: 1.75rem;
+  }
 }
