--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'buttons.scss';
 @import 'ceremony.scss';
 @import 'reception.scss';
+@import 'day2.scss';
 @import 'rsvp.scss';
 @import 'contact.scss';
 @import 'countdown.scss';
