--- a/scss/_accomodation.scss
+++ b/scss/_accomodation.scss
@@ -1,4 +1,15 @@
 .accomodation-section {
+  .card-title  {
+    background-color: "darkslategrey";   
+    color: "white";
+    }
+  .card {
+      height: 100%;
+      border: 2px solid "darkslategrey";
+  }
+    .note-txt {
+        color:  darkred;
+    }
   .accomodation-icon {
     font-size: 180%;
   }
