--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,7 @@
 @import 'reception.scss';
 @import 'day2.scss';
 @import 'rsvp.scss';
+@import 'sms-updates.scss';
 @import 'contact.scss';
 @import 'countdown.scss';
 @import 'polaroides.scss';
